--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,20 +7,27 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=sqlite:///./optcg_stats.db
-      - DEBUG=false
+      - DEBUG=true
       - SCRAPE_INTERVAL_HOURS=6
       - PRICE_CACHE_TTL_HOURS=4
     volumes:
+      - ./backend:/app
       - ./backend/data:/app/data
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     restart: unless-stopped
 
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
-      - "5173:80"
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=/api
+      - VITE_PROXY_TARGET=http://backend:8000
+    restart: unless-stopped
     depends_on:
       - backend
-    restart: unless-stopped
-
